--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -10,7 +10,7 @@
   ],
   "license": "MIT",
   "scripts": {
-    "start": "vue-cli-service serve",
+    "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint",
